test(swagger): test add comment swagger in controller
